--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.4.1",
     "mdbreact": "^4.22.1",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
