--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "homepage": "http://tedilesmana.github.io/Project-E-Comerces-BabaStore",
   "name": "project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "babel-preset-react-app": "^9.0.0",
     "fg-loadcss": "^2.1.0",
@@ -16,19 +18,16 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.3.0",
     "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "aws s3 sync build/ s3://baba-academy/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -42,19 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "gh-pages": "^2.1.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tedilesmana/Project-E-Comerces-BabaStore.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tedilesmana/Project-E-Comerces-BabaStore/issues"
-  }
+  "author": "tedilesmana <tedilesmana0123@gmail.com>",
+  "license": "MIT"
 }
